# v_eye

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md
CMakeModules/: FindORB_SLAM3.cmake
calibrate/: calibrate_camera.cpp  calibrate_device2world_handeye.cpp  capture.cpp  capture_withoutq.cpp
configs/: params.yaml
io/: CMakeLists.txt  camera.cpp
io/hikrobot/: hikrobot.cpp  hikrobot.hpp
src/: record_video.cpp
tools/: CMakeLists.txt  hik_video_recorder.cpp  hik_video_recorder.hpp  logger.cpp  math_tools.cpp  math_tools.hpp  thread_safe_queue.hpp  yaml.hpp
